--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -29,13 +29,13 @@ Googel Fonts  */
   background: #03a9f3; }
 
 .bg-flat-color-4 {
-  background: #fb9678; }
+  background: #ebe72d; }
 
 .bg-flat-color-5 {
   background: #66bb6a; }
 
 .bg-flat-color-6 {
-  background: #5c6bc0; }
+  background: #c05c5c; }
 
 .bg-transparent {
   background-color: transparent; }
@@ -174,13 +174,13 @@ Googel Fonts  */
   color: #03a9f3; }
 
 .flat-color-4 {
-  color: #fb9678; }
+  color: #fae73b; }
 
 .flat-color-5 {
   color: #66bb6a; }
 
 .flat-color-6 {
-  color: #5c6bc0; }
+  color: #dd4444; }
 
 .bg-twitter {
   background: #1da1f2; }
@@ -632,7 +632,7 @@ aside.left-panel {
           color: #607d8b;
           float: left;
           margin-top: 8px;
-          width: 55px;
+          width: 30px;
           text-align: left;
           z-index: 9; }
         .navbar .navbar-nav li > a .menu-title-text {
@@ -2524,7 +2524,7 @@ footer.site-footer {
       max-width: inherit;
       font-size: 14px; }
       #left-panel .navbar .navbar-nav li > a .menu-icon {
-        width: 55px;
+        width: 30px;
         text-align: left;
         font-size: 14px; }
     #left-panel .navbar .navbar-nav li.menu-item-has-children.show .sub-menu {
