--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1324,11 +1324,11 @@ header .form-inline {
     .card .card-top button,
     .card .card-footer button {
       background: none;
-      border: none;
+      border: 15;
       -webkit-box-shadow: none;
               box-shadow: none;
-      color: #868e96;
-      font-size: 12px;
+      color: #000000;
+      font-size: 18px;
       padding: 0 5px; }
     .card .card-top[class*="bg"] .card-title,
     .card .card-footer[class*="bg"] .card-title {
